fixed button overlap

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -68,7 +68,8 @@ footer {
 }
 
 #navbar li {
-  display: inline-block;
+  display: inline-flex;
+  justify-content: space-between;
 }
 
 #navbar li a {
